--- a/css/liste-photo.css
+++ b/css/liste-photo.css
@@ -83,7 +83,6 @@
     height: 34px;
 }
 
-
 .view-all-button {
     display: flex;  
     justify-content: center;  
@@ -120,6 +119,75 @@
 
 /* FILTRE TRI */
 
+.filter-container{
+    position: relative;
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between;
+}
+
+.filter-container p {
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 3%;
+}
+
+.filter-list ul {
+    display: none;
+    list-style-type: none;
+    position: absolute; 
+    width: 255px; 
+    background-color: white; 
+    border-top: #215AFF;
+    border-bottom-left-radius: 8px; 
+    border-bottom-right-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.1); 
+    max-height: 0; 
+    overflow: hidden; 
+    transition: max-height 0.3s ease-out;
+    margin-left: -19px;
+    margin-top: 1px; 
+    top: 100%; 
+    padding: 0;
+}
+
+.filter-list.open ul {
+    display: block; 
+    max-height: 218px;
+    z-index: 2;
+}
+
+.filter-list .chevron-icon {
+    transition: transform 0.3s ease; 
+}
+
+.filter-list.open .chevron-icon {
+    transform: rotate(180deg); 
+}
+
+.filter-list.open {
+    border: 1.3px solid #215AFF;
+    border-radius: 8px 8px 0 0;
+}
+
+.filter-list {
+    position: relative;
+    width: 260px;  
+    height: 43px;  
+    padding: 0 18px 0 18px;
+    margin-bottom: 20px; 
+    border-radius: 8px;  
+    border: 1.3px solid #B8BBC2;  
+    justify-content: space-between;
+    list-style-type: none;
+    z-index: 1;
+}
+
+.filter-list:hover {
+    border: 1.3px solid #215AFF;  
+}
+
 .filters-and-sort {
     max-width: 1126px;  
     margin: 0 auto;  
@@ -129,68 +197,78 @@
     justify-content: start;
 }
 
-.filters-and-sort label, .filters-and-sort select {
-    font-family: Poppins;  
+.filter-list li {
+    font-family: "Poppins";  
     font-size: 12px;  
     font-weight: 500;  
     line-height: 18px;  
     letter-spacing: 0.03em;  
     text-align: left;  
-    text-transform: uppercase;  
+    padding: 11px 0 11px 20px;
+    text-transform:capitalize;
 }
 
-#category-filter{
-    margin-right: 30px;
+.filter-list li:hover{
+    background-color: #FFD6D6;
 }
 
-#date-sort{
+.filter-list li.selected {
+    background-color: #E00000; 
+    color: #ffffff;
+}
+
+#category-filter-list {
+    margin-right: 50px;
+    margin-left: -10px;
+    margin-bottom: 0px;
+}
+
+#date-sort-list{
     margin-left: 320px;
 }
 
-#category-filter,
-#format-filter,
-#date-sort{
-    width: 260px;  
-    height: 43px;  
-    padding: 11px 18px 11px 18px;  
-    margin-bottom: 20px; 
-    border-radius: 8px;  
-    border: 1.3px solid #B8BBC2;  
-    justify-content: space-between;
-}
-
-/* MEDIA FILTRE */
+/* MEDIA */
 
 @media (max-width: 768px) {
+
     .filters-and-sort {
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 20px; 
+        display: contents;    
     }
 
-    #category-filter,
-    #format-filter,
-    #date-sort{
-        margin-bottom: 0; 
-}
-
-    #category-filter,
-    #date-sort{
-        margin: 10px 0;
+    #category-filter-list {
+        margin-left: 60px;
+        margin-top: 30px;
+        width: 218px;
     }
 
-}
+    #format-filter-list {
+        margin-left: 60px;
+        margin-top: 10px;
+        width: 218px;
+    }
 
-/* MEDIA*/
+    #date-sort-list {
+        margin-left: 60px;
+        margin-top: -10px;
+        margin-bottom: 30px;
+        width: 218px;
+    }
 
-@media (max-width: 768px) {
     .thumbnail-container-accueil {
-        display: block;  
+        display: contents !important;
     }
+
     .custom-post-thumbnail {
-        flex-basis: 100%;  
+        margin-bottom: 30px !important;
+        Width: 317px;
+        margin-left: 15px;
     }
-    .custom-post-thumbnail {
-        margin-bottom: 10px;  
+
+    .filter-list {
+        z-index: auto;
+    }
+
+    #load-more-posts {
+        margin-left: 45px;
     }
 }
