--- a/css/footer.css
+++ b/css/footer.css
@@ -18,13 +18,13 @@
     padding-top: 5px;
 }
 
-.footer-menu a:hover {
+.footer-menu li a:hover {
     font-family: "Space Mono", monospace;
     font-size: 16px;
     font-weight: 700;
 }
 
-/* MODAL */
+/* MODAL HEADER */
 
 .modal {
     display: none;
@@ -40,43 +40,29 @@
 
 .modal-content {
     position: fixed;
+    border: 5px solid black; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: auto;
+    width: 597px; 
     max-width: 80%;
-    height: auto;
+    height: 769px; 
     background-color: #fff;
-    padding: 20px;
+    padding-top: 15px;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.8s;
     animation-name: animatetop;
     animation-duration: 0.8s;
     animation-timing-function: ease;
 }
+
 .modal-content img {
     display: block;
     width: 100%;
     height: auto;
-    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
 }
-
-.close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 
 #open-modal-button-footer {
     background-color: transparent;
@@ -85,60 +71,73 @@
     cursor: pointer;
 }
 
-/* MEDIA MOBILE */
-@media screen and (max-width: 767px) {
-    .footer-menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
-        padding-top: 10px;
-        flex-flow: column;
-    }
-
-    .footer-menu ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    .footer-menu li {
-        margin: 10px 0;
-        text-align: center;
-    }
+#open-modal-button-header {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 }
 
-/*  MEDIA MODAL */
-@-webkit-keyframes animatetop {
-    from {
-        top: 0;
-        opacity: 1;
-    }
-
-    to {
-        top: 50%;
-        opacity: 1;
-    }
+#open-modal-button-header:hover {
+    font-family: "Space Mono", monospace;
+    font-size: 16px;
+    font-weight: 700;
 }
 
-@keyframes animatetop {
-    from {
-        top: 0;
-        opacity: 1;
-    }
+/* MODAL SINGLE*/
 
-    to {
-        top: 50%;
-        opacity: 1;
-    }
+.modal-photo {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.822);
+    overflow: auto;
 }
 
-@media (max-width: 768px) {
-    .modal-content {
-        max-width: 95%;
-        overflow-y: auto; 
-        max-height: 67vh; 
-    }
+.modal-content-photo {
+    position: fixed;
+    border: 5px solid black; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 597px; 
+    max-width: 80%;
+    height: 769px; 
+    background-color: #fff;
+    padding-top: 15px;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.8s;
+    animation-name: animatetop;
+    animation-duration: 0.8s;
+    animation-timing-function: ease;
+}
+
+.modal-container {
+    display: none !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 10000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.modal-container.opened {
+    opacity: 1;
+    display: flex !important;
+}
+  
+.modal-container img {
+    max-height: 80vh;
 }
 
 /* CONTACT FORM 7 */
@@ -170,7 +169,7 @@ input[type=submit] {
     transition: .3s ease-in-out;
     cursor: pointer;
     font-family: "Space Mono";
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 17.77px;
     letter-spacing: 0em;
@@ -204,7 +203,7 @@ input[type=submit]:hover {
 .wpcf7 input[type="email"],
 .wpcf7 textarea {
     width: 263px;
-    height: 40px;
+    height: 30px;
     border-radius: 8px;
     border: 1px solid #B8BBC2;
     background: linear-gradient(0deg, #FFFFFF, #FFFFFF);
@@ -228,4 +227,13 @@ input[type=submit]:hover {
     height: 190px;
 }
 
+/* MEDIA FOOTER*/
+
+@media (max-width: 768px) {
+    .menu li {
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+    
+}
 
